Fix edit event modal not showing up

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -176,7 +176,7 @@ a {
 }
 
 .modal {
-display: none;
+display: block;
 }
 
 /* Modal Content/Box */
